# proj-game2

./: CMakeLists.txt
src/: face.cpp  face.hpp  figure.cpp  figure.h  geometry.cpp  geometry.hpp  inputs.cpp  inputs.h  inputs.hpp  main.cpp  render.cpp  render.h  render.hpp  settings.h  settings.hpp  shader.frag  shaderManager.cpp  shaderManager.h  shaderManager.hpp
